# Osi2

./: .gitignore  .travis.yml  Dependencies  Externals  Makefile.am  Makefile.in  acinclude.m4  configure  configure.ac  osi2.pc.in  osi2clpshim.pc.in  osi2plugin.pc.in
Osi2/: AUTHORS  Dependencies  INSTALL  Makefile.am  Makefile.in  acinclude.m4  configure  configure.ac  osi2-uninstalled.pc.in  osi2-unittests-uninstalled.pc.in  osi2-unittests.pc.in  osi2.pc.in  osi2clpheavyshim-uninstalled.pc.in  osi2clpheavyshim.pc.in  osi2clpshim-uninstalled.pc.in  osi2clpshim.pc.in  osi2plugin-uninstalled.pc.in  osi2plugin.pc.in
Osi2/cxxtest/: Makefile.am  Makefile.in  Osi2PluginTest.cpp  Osi2PluginTest.hpp
Osi2/data/: parincLinear.osil
Osi2/doc/: apihierarchy.eps  doxygen.conf  ima_notes.txt  loustandard.sty  osi-informs-charlotte.tex  osi2design.aux  osi2design.bbl  osi2design.bib  osi2design.blg  osi2design.dvi  osi2design.tex
Osi2/inc/: config_os.h.in  config_osi2.h  config_osi2.h.in
Osi2/src/: Makefile.in  OsiXForm.cpp  OsiXForm.h  OsiXFormMgr.cpp  makefile.am
Osi2/src/Osi2/: Makefile.am  Makefile.in  Osi2API.hpp  Osi2APIMgmt_Imp.hpp  Osi2ClpSimplexAPI.hpp  Osi2ClpSolveParamsAPI.hpp  Osi2Config.h  Osi2ControlAPI.hpp  Osi2ControlAPI_Imp.cpp  Osi2ControlAPI_Imp.hpp  Osi2CtrlAPIMessages.cpp  Osi2CtrlAPIMessages.hpp  Osi2Osi1API.hpp  Osi2ParamBEAPI.hpp  Osi2ParamBEAPIMessages.cpp  Osi2ParamBEAPIMessages.hpp  Osi2ParamBEAPI_Imp.cpp  Osi2ParamBEAPI_Imp.hpp  Osi2ParamFEAPI.hpp  Osi2ParamMgmtAPI.hpp  Osi2ParamMgmtAPIMessages.cpp  Osi2ParamMgmtAPIMessages.hpp  Osi2ParamMgmtAPI_Imp.cpp  Osi2ParamMgmtAPI_Imp.hpp  Osi2ProbMgmtAPI.hpp  Osi2RunParamsAPI.hpp  Osi2RunParamsAPI_Imp.hpp  config.h.in  config_osi2.h.in
Osi2/src/Osi2Kipp/: Osi2Interface.h  OsiXForm.cpp  OsiXForm.h  OsiXFormMgr.cpp  OsiXFormMgr.h
Osi2/src/Osi2Plugin/: Makefile.am  Makefile.in  Osi2Directory.cpp  Osi2Directory.hpp  Osi2DynamicLibrary.cpp  Osi2DynamicLibrary.hpp  Osi2ObjectAdapter.hpp  Osi2Path.cpp  Osi2Path.hpp  Osi2PlugMgrMessages.cpp  Osi2PlugMgrMessages.hpp  Osi2Plugin.hpp  Osi2PluginBase.cpp  Osi2PluginBase.hpp  Osi2PluginManager.cpp  Osi2PluginManager.hpp  Osi2StreamingException.hpp
Osi2/src/Osi2Shims/: Makefile.am  Makefile.in  Osi2CFuncTemplates.cpp  Osi2ClpHeavyShim.cpp  Osi2ClpHeavyShim.hpp  Osi2ClpLite_Wrap.cpp  Osi2ClpLite_Wrap.hpp  Osi2ClpShim.cpp  Osi2ClpShim.hpp  Osi2ClpSimplexAPI_ClpLite.cpp  Osi2ClpSimplexAPI_ClpLite.hpp  Osi2ClpSolveParamsAPI_ClpLite.hpp  Osi2GlpkHeavyShim.cpp  Osi2GlpkHeavyShim.hpp  Osi2Osi1API_ClpHeavy.cpp  Osi2Osi1API_ClpHeavy.hpp  Osi2Osi1API_GlpkHeavy.cpp  Osi2ProbMgmtAPI_Clp.cpp  Osi2ProbMgmtAPI_Clp.hpp  Osi2ProbMgmtAPI_ClpHeavy.cpp  Osi2ProbMgmtAPI_ClpHeavy.hpp
Osi2/test/: Makefile.am  Makefile.in  unitTest.cpp
cxxtest/: Makefile.am  Makefile.in  Osi2PluginTest.cpp  Osi2PluginTest.hpp
doc/: adjustbb  codedocn.sty  makefile  osi-informs-austin.tex  osi-informs-austin2.tex  osi2design.tex
src/Osi2/: Makefile.am  Makefile.in  Osi2APIMgmt_Imp.hpp  Osi2ClpSimplexAPI.hpp  Osi2ClpSolveParamsAPI.hpp  Osi2Config.h  Osi2ControlAPI.hpp  Osi2ControlAPI_Imp.cpp  Osi2ControlAPI_Imp.hpp  Osi2CtrlAPIMessages.cpp  Osi2Osi1API.hpp  Osi2ParamBEAPI.hpp  Osi2ParamBEAPIMessages.hpp  Osi2ParamBEAPI_Imp.cpp  Osi2ParamBEAPI_Imp.hpp  Osi2ParamMgmtAPI_Imp.cpp  Osi2ParamMgmtAPI_Imp.hpp  Osi2ProbMgmtAPI.hpp  Osi2RunParamsAPI_Imp.cpp  Osi2RunParamsAPI_Imp.hpp  config.h.in  config_default.h  config_osi2_default.h
src/Osi2Kipp/: Osi2Config.h  Osi2Interface.cpp  Osi2Interface.h  OsiXForm.cpp  OsiXForm.h  OsiXFormMgr.cpp
src/Osi2Plugin/: Makefile.in  Osi2DynamicLibrary.cpp  Osi2DynamicLibrary.hpp  Osi2ObjectAdapter.hpp  Osi2PlugMgrMessages.hpp  Osi2Plugin.hpp  Osi2PluginBase.cpp  Osi2PluginBase.hpp  Osi2PluginManager.cpp  Osi2PluginManager.hpp  Osi2nullptr.hpp
src/Osi2Shims/: Makefile.in  Osi2ClpHeavyShim.cpp  Osi2ClpHeavyShim.hpp  Osi2ClpShim.cpp  Osi2ClpShim.hpp  Osi2ClpSimplexAPI_ClpLite.cpp  Osi2ClpSimplexAPI_ClpLite.hpp  Osi2ClpSolveParamsAPI_ClpLite.cpp  Osi2GlpkHeavyShim.cpp  Osi2Osi1API_ClpHeavy.cpp  Osi2Osi1API_GlpkHeavy.hpp  Osi2ProbMgmtAPI_Clp.cpp  Osi2ProbMgmtAPI_ClpHeavy.cpp  Osi2ProbMgmtAPI_ClpHeavy.hpp
test/: Makefile.am  Makefile.in  unitTest.cpp
